--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>TrigguiApp – Un instante, un universo</title>
 
-  <!-- Cargamos Three.js oficial -->
+  <!-- Cargar Three.js -->
   <script src="https://unpkg.com/three@0.152.2/build/three.min.js"></script>
 
-  <!-- Fuente Archivo para estética -->
+  <!-- Fuente Archivo -->
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
@@ -19,17 +19,15 @@
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
+      perspective: 1200px;
       transition: background 1s ease;
     }
     body.dark { background: #000; }
 
     .main {
-      width: 100%;
-      height: 100%;
+      height: 100vh;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
       opacity: 0;
       animation: fadeIn 1.5s ease forwards;
     }
@@ -37,22 +35,77 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-    #canvas-container {
-      width: 100%;
-      height: 100%;
-      position: relative;
+
+    .grid {
+      flex: 1;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      gap: 2vw;
+      padding: 2vw;
+    }
+    @media (orientation: landscape), (min-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+      }
+    }
+    .block {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      border-radius: 16px;
+      font-weight: bold;
+      font-size: 1.1rem;
+      color: white;
+      background-size: cover;
+      background-position: center;
+      cursor: pointer;
+      transition: all 0.5s ease;
       overflow: hidden;
+      transform: scale(0.95);
+      opacity: 0;
+      animation: scaleFadeIn 1.6s forwards;
+      position: relative;
+      padding: 10px;
     }
-    canvas {
-      display: block;
-      width: 100%;
-      height: 100%;
+    @keyframes scaleFadeIn {
+      to { transform: scale(1); opacity: 1; }
     }
-  </style>
+    .block-content {
+      position: absolute;
+      inset: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 14px;
+      text-align: center;
+    }
+    .label { z-index: 1; }
+    .accionable {
+      color: white;
+      font-size: 1rem;
+      font-weight: 600;
+      padding: 16px;
+      border-radius: 16px;
+      opacity: 0;
+      animation: aparecer 0.6s forwards;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+    }
+    @keyframes aparecer {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+</style>
 </head>
+
 <body>
 <div class="main">
-  <div id="canvas-container"></div>
+  <div class="grid" id="gridContainer"></div>
+
+  <!-- Contenedor para el Canvas 3D de la portada revelada -->
+  <div id="canvas-container" class="hidden" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;"></div>
 
   <div class="footer">
     <button class="shock hidden" id="shockBtn">📖 ¡Chócalas por abrir un libro físico!</button>
@@ -61,48 +114,165 @@
   </div>
 </div>
 <script>
-const container = document.getElementById('canvas-container');
+const el = id => document.getElementById(id);
 
-// Crear la escena
-const scene = new THREE.Scene();
+const nombresBloques = [
+  ["Pausa", "Respira", "Detente", "Vacía", "Fluye"],
+  ["Descubre", "Explora", "Lee", "Observa", "Inspírate"],
+  ["Reflexiona", "Actúa", "Muévete", "Sorpréndete", "Transforma"],
+  ["Siente", "Conecta", "Abraza", "Disfruta", "Vibra"]
+];
+const colores = ["bg1", "bg2", "bg3", "bg4"];
 
-// Crear la cámara
-const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-camera.position.z = 3;
+const libros = [
+  {
+    titulo: "Los hábitos secretos de los genios",
+    portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg",
+    fondo: "#140038",
+    frases: [
+      "🌬️ Tómate un momento para observar el vacío.",
+      "🔍 Encuentra una chispa nueva en tu curiosidad.",
+      "🧠 Reflexiona en qué puedes mejorar hoy.",
+      "💓 Siente la grandeza que ya habita en ti."
+    ]
+  },
+  {
+    titulo: "Think Again",
+    portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1602574232i/55539565.jpg",
+    fondo: "#001a33",
+    frases: [
+      "🌬️ Deja ir lo que creías cierto.",
+      "🔍 Abre una nueva pregunta interna.",
+      "🧠 Reflexiona sobre una idea que merece ser reescrita.",
+      "💓 Siente la libertad del desaprendizaje."
+    ]
+  },
+  {
+    titulo: "Crea",
+    portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1662270336i/62237986.jpg",
+    fondo: "#33001a",
+    frases: [
+      "🌬️ Da espacio al caos creativo.",
+      "🔍 Descubre la magia de construir algo tuyo.",
+      "🧠 Reflexiona sobre lo que puedes crear hoy.",
+      "💓 Siente el impulso de hacer algo real."
+    ]
+  },
+  {
+    titulo: "Good to Great",
+    portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1546097703i/76865.jpg",
+    fondo: "#003300",
+    frases: [
+      "🌬️ Haz una pausa y pregúntate: ¿puedo ser mejor?",
+      "🔍 Explora tu siguiente nivel de disciplina.",
+      "🧠 Reflexiona en tu visión a largo plazo.",
+      "💓 Siente la energía de dar el salto."
+    ]
+  },
+  {
+    titulo: "When",
+    portada: "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1544822311i/43163538.jpg",
+    fondo: "#333300",
+    frases: [
+      "🌬️ Escucha el ritmo natural de tu día.",
+      "🔍 Descubre tu mejor hora para actuar.",
+      "🧠 Reflexiona cuándo tomas tus mejores decisiones.",
+      "💓 Siente el flujo de tu mejor momento."
+    ]
+  }
+];
 
-// Crear el renderer
-const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
-renderer.setPixelRatio(window.devicePixelRatio);
-container.appendChild(renderer.domElement);
+let libroActual, bloquePortada, revelado = false;
 
-// Crear una luz ambiental
-const ambientLight = new THREE.AmbientLight(0xffffff, 1);
-scene.add(ambientLight);
+function iniciarJuego() {
+  const grid = el('gridContainer');
+  const logo = el('logoTriggui');
+  grid.innerHTML = '';
+  libroActual = libros[Math.floor(Math.random() * libros.length)];
+  bloquePortada = Math.floor(Math.random() * 4);
+  revelado = false;
+  logo.classList.remove("hidden");
 
-// Crear el "libro" como una caja delgada
-const geometry = new THREE.BoxGeometry(1, 1.4, 0.1);
-const texture = new THREE.TextureLoader().load('https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1642726660i/60171734.jpg'); // Ejemplo de portada
-const material = new THREE.MeshStandardMaterial({ map: texture });
-const libro = new THREE.Mesh(geometry, material);
-scene.add(libro);
-
-// Animación
-function animate() {
-  requestAnimationFrame(animate);
-  libro.rotation.y += 0.0025;
-  libro.rotation.x += 0.0015;
-  renderer.render(scene, camera);
+  nombresBloques.forEach((opciones, i) => {
+    const nombre = opciones[Math.floor(Math.random() * opciones.length)];
+    const div = document.createElement('div');
+    div.className = `block ${colores[i]}`;
+    div.id = "bloque" + i;
+    div.innerHTML = `
+      <div class="block-content label">${nombre.toUpperCase()}</div>
+      <div class="block-content accionable hidden" id="bloque${i}Text">${libroActual.frases[i]}</div>
+    `;
+    div.onclick = () => manejarClick(i);
+    grid.appendChild(div);
+  });
 }
 
-animate();
+function manejarClick(i) {
+  if (revelado) return location.reload();
+  if (i === bloquePortada) {
+    revelarTodo();
+  } else {
+    const text = el("bloque" + i + "Text");
+    if (text) {
+      text.classList.remove("hidden");
+      el("bloque" + i).querySelector(".label").classList.add("hidden");
+    }
+  }
+}
 
-// Ajuste responsivo
-window.addEventListener('resize', () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
+function revelarTodo() {
+  document.getElementById('gridContainer').classList.add('hidden');
+  el('canvas-container').classList.remove('hidden');
+  document.body.classList.add("dark");
+  document.body.style.background = libroActual.fondo;
+  el("shockBtn").classList.remove("hidden");
+  el("logoTriggui").classList.add("hidden");
+  crearLibro3D(libroActual.portada);
+  revelado = true;
+}
+
+function crearLibro3D(urlPortada) {
+  const container = document.getElementById('canvas-container');
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+  camera.position.z = 3;
+
+  const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
   renderer.setSize(window.innerWidth, window.innerHeight);
-});
+  renderer.setPixelRatio(window.devicePixelRatio);
+  container.innerHTML = '';
+  container.appendChild(renderer.domElement);
+
+  const ambientLight = new THREE.AmbientLight(0xffffff, 1);
+  scene.add(ambientLight);
+
+  const geometry = new THREE.BoxGeometry(1, 1.4, 0.1);
+  const texture = new THREE.TextureLoader().load(urlPortada);
+  const material = new THREE.MeshStandardMaterial({ map: texture });
+  const libro = new THREE.Mesh(geometry, material);
+  scene.add(libro);
+
+  function animate() {
+    requestAnimationFrame(animate);
+    libro.rotation.y += 0.0025;
+    libro.rotation.x += 0.0015;
+    renderer.render(scene, camera);
+  }
+  animate();
+
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
+}
+
+el("shockBtn").onclick = () => {
+  el("shockBtn").classList.add("hidden");
+  el("mensajeFinal").classList.remove("hidden");
+};
+
+iniciarJuego();
 </script>
 </body>
 </html>
