--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>TrigguiApp – Un instante, un universo</title>
-
-  <!-- Cargar Three.js -->
-  <script src="https://unpkg.com/three@0.152.2/build/three.min.js"></script>
-
-  <!-- Fuente Archivo -->
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -19,8 +13,8 @@
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
-      perspective: 1200px;
       transition: background 1s ease;
+      perspective: 1200px;
     }
     body.dark { background: linear-gradient(135deg, #0d0e1a, #1a1c2d); }
 
@@ -29,7 +23,7 @@
       display: flex;
       flex-direction: column;
       opacity: 0;
-      animation: fadeIn 1.5s ease forwards;
+      animation: fadeIn 1.6s ease forwards;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
@@ -45,11 +39,9 @@
       padding: 2vw;
     }
     @media (orientation: landscape), (min-width: 768px) {
-      .grid {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr;
-      }
+      .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
     }
+
     .block {
       display: flex;
       justify-content: center;
@@ -69,11 +61,13 @@
       animation: scaleFadeIn 1.6s forwards;
       position: relative;
       padding: 10px;
-      min-height: 30vh; /* Important: mantener altura mínima para bloques */
+      min-height: 30vh;
+      backdrop-filter: brightness(1);
     }
     @keyframes scaleFadeIn {
       to { transform: scale(1); opacity: 1; }
     }
+
     .block-content {
       position: absolute;
       inset: 0;
@@ -83,7 +77,9 @@
       padding: 14px;
       text-align: center;
     }
+
     .label { z-index: 1; }
+
     .accionable {
       color: white;
       font-size: 1rem;
@@ -98,6 +94,99 @@
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
+
+    /* 🎯 Portada flotante 3D ÉPICA */
+    .portada-wrapper {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transform-style: preserve-3d;
+      animation: flotarRespirar 6s ease-in-out infinite;
+      background: radial-gradient(rgba(255,255,255,0.05), transparent 70%);
+      border-radius: 22px;
+    }
+    .portada-wrapper img {
+      width: 88%;
+      max-height: 92%;
+      object-fit: cover;
+      aspect-ratio: 2/3;
+      border-radius: 22px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.45);
+      transition: transform 0.6s ease, box-shadow 0.6s ease;
+      transform: perspective(800px) rotateX(0deg) rotateY(0deg) translateZ(0px);
+    }
+    .portada-wrapper img:hover {
+      transform: perspective(800px) rotateX(5deg) rotateY(5deg) scale(1.05) translateZ(40px);
+      box-shadow: 0 30px 70px rgba(255,255,255,0.2);
+    }
+    @keyframes flotarRespirar {
+      0% {
+        transform: translateY(0px) rotateX(0deg) scale(1) translateZ(0px);
+      }
+      25% {
+        transform: translateY(-8px) rotateX(3deg) scale(1.02) translateZ(20px);
+      }
+      50% {
+        transform: translateY(0px) rotateX(0deg) scale(1) translateZ(0px);
+      }
+      75% {
+        transform: translateY(-8px) rotateX(-3deg) scale(1.02) translateZ(20px);
+      }
+      100% {
+        transform: translateY(0px) rotateX(0deg) scale(1) translateZ(0px);
+      }
+    }
+
+    .footer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1vh;
+      min-height: 80px;
+      justify-content: center;
+    }
+
+    .shock {
+      background: linear-gradient(135deg, #ff6a00, #ffb347);
+      color: white;
+      font-weight: bold;
+      border: none;
+      border-radius: 30px;
+      padding: 14px 26px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      box-shadow: 0 0 18px rgba(255, 175, 95, 0.6);
+      margin-bottom: 6px;
+      animation: pulse 2s infinite;
+      transition: background 0.6s ease, box-shadow 0.6s ease;
+    }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.08); }
+    }
+
+    .final-message {
+      color: white;
+      font-size: 1rem;
+      text-align: center;
+      opacity: 0;
+      animation: fadeIn 2s forwards;
+    }
+
+    .trigguiletras {
+      height: 24px;
+      opacity: 0.9;
+      transition: opacity 0.4s ease;
+    }
+
+    .hidden { display: none !important; }
+
+    .bg1 { background: linear-gradient(135deg, #ff7e5f, #feb47b); }
+    .bg2 { background: linear-gradient(135deg, #43cea2, #185a9d); }
+    .bg3 { background: linear-gradient(135deg, #8e2de2, #4a00e0); }
+    .bg4 { background: linear-gradient(135deg, #fc466b, #3f5efb); }
   </style>
 </head>
 <body>
@@ -207,7 +296,7 @@ function iniciarJuego() {
 function manejarClick(i) {
   if (revelado) return location.reload();
   if (i === bloquePortada) {
-    revelarBloque(i);
+    revelarTodo();
   } else {
     const text = el("bloque" + i + "Text");
     if (text) {
@@ -217,57 +306,37 @@ function manejarClick(i) {
   }
 }
 
-function revelarBloque(i) {
-  const block = el("bloque" + i);
-  block.innerHTML = '';
-  block.style.background = "none";
-  block.style.padding = "0";
-  block.style.minHeight = "40vh"; // Aseguramos altura decente para 3D
-  block.style.position = "relative";
+function revelarTodo() {
+  nombresBloques.forEach((_, i) => {
+    const block = el("bloque" + i);
+    const label = block.querySelector(".label");
+    const text = block.querySelector(".accionable");
 
-  const canvas = document.createElement('canvas');
-  canvas.style.width = "100%";
-  canvas.style.height = "100%";
-  canvas.style.position = "absolute";
-  canvas.style.top = "0";
-  canvas.style.left = "0";
-  block.appendChild(canvas);
+    if (i === bloquePortada) {
+      block.innerHTML = '';
+      block.style.background = "none";
+      block.style.padding = "0";
 
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(60, block.clientWidth / block.clientHeight, 0.1, 1000);
-  camera.position.z = 2.5;
+      const wrapper = document.createElement("div");
+      wrapper.className = "portada-wrapper";
 
-  const renderer = new THREE.WebGLRenderer({ canvas: canvas, alpha: true, antialias: true });
-  renderer.setSize(block.clientWidth, block.clientHeight);
-  renderer.setPixelRatio(window.devicePixelRatio);
+      const img = document.createElement("img");
+      img.src = libroActual.portada;
+      img.alt = "Portada del libro";
 
-  const ambientLight = new THREE.AmbientLight(0xffffff, 1);
-  scene.add(ambientLight);
-
-  const geometry = new THREE.BoxGeometry(1, 1.4, 0.08);
-  const texture = new THREE.TextureLoader().load(libroActual.portada);
-  const material = new THREE.MeshStandardMaterial({ map: texture });
-  const libro = new THREE.Mesh(geometry, material);
-  scene.add(libro);
-
-  function animate() {
-    requestAnimationFrame(animate);
-    libro.rotation.y += 0.003;
-    libro.rotation.x += 0.0015;
-    renderer.render(scene, camera);
-  }
-  animate();
-
-  window.addEventListener('resize', () => {
-    camera.aspect = block.clientWidth / block.clientHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(block.clientWidth, block.clientHeight);
+      wrapper.appendChild(img);
+      block.appendChild(wrapper);
+    } else {
+      if (text) text.classList.remove("hidden");
+      if (label) label.classList.add("hidden");
+      block.style.opacity = "0.4"; // Atenuamos los demás bloques para enfocar visualmente
+    }
   });
 
   document.body.classList.add("dark");
   document.body.style.background = libroActual.fondo;
   el("shockBtn").classList.remove("hidden");
-  el("logoTriggui").classList.add("hidden"); // Ocultamos logo Triggui al revelar
+  el("logoTriggui").classList.add("hidden");
   revelado = true;
 }
 
