--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
       transition: background 1s ease;
-      perspective: 1200px; /* NUEVO: activa profundidad 3D real */
+      perspective: 1200px;
     }
     body.dark { background: #000; }
-    .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.6s ease forwards; }
+    .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.5s ease forwards; }
     @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     .grid {
       flex: 1;
@@ -73,15 +73,15 @@
     }
     @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
 
-    /* Nueva animación 3D de la portada */
+    /* Portada perfecta */
     .portada-wrapper {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
+      animation: flotarRespirarTilt 8s ease-in-out infinite;
       transform-style: preserve-3d;
-      animation: flotarYRespirar 6s ease-in-out infinite;
       background: transparent;
     }
     .portada-wrapper img {
@@ -90,28 +90,28 @@
       object-fit: cover;
       aspect-ratio: 2/3;
       border-radius: 22px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.35);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
       transition: transform 0.6s ease;
     }
     .portada-wrapper img:hover {
-      transform: scale(1.06) translateZ(40px);
+      transform: scale(1.06) rotateY(6deg) rotateX(3deg);
     }
 
-    @keyframes flotarYRespirar {
+    @keyframes flotarRespirarTilt {
       0% {
-        transform: translateY(0) rotateX(0deg) scale(1) translateZ(0px);
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
       }
       25% {
-        transform: translateY(-6px) rotateX(3deg) scale(1.02) translateZ(20px);
+        transform: translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015);
       }
       50% {
-        transform: translateY(0) rotateX(0deg) scale(1) translateZ(0px);
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
       }
       75% {
-        transform: translateY(-6px) rotateX(-3deg) scale(1.02) translateZ(20px);
+        transform: translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015);
       }
       100% {
-        transform: translateY(0) rotateX(0deg) scale(1) translateZ(0px);
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
       }
     }
 
@@ -254,12 +254,12 @@ function iniciarJuego() {
   nombresBloques.forEach((opciones, i) => {
     const nombre = opciones[Math.floor(Math.random() * opciones.length)];
     const div = document.createElement('div');
-    div.className = block ${colores[i]};
+    div.className = `block ${colores[i]}`;
     div.id = "bloque" + i;
-    div.innerHTML = 
+    div.innerHTML = `
       <div class="block-content label">${nombre.toUpperCase()}</div>
       <div class="block-content accionable hidden" id="bloque${i}Text">${libroActual.frases[i]}</div>
-    ;
+    `;
     div.onclick = () => manejarClick(i);
     grid.appendChild(div);
   });
